%%{init: {"theme": "default"}}%%
classDiagram
  direction TB
  class Gem { <<enumeration>> }
  class MoveType { <<enumeration>> }
  class GameState { <<enumeration>> }
  class MenuAction { <<enumeration>> }
  class Card
  class Noble
  class Player
  class ComputerPlayer
  class Move
  class Board
  class Game
  class MenuOption

  Player <|-- ComputerPlayer
  Game *-- Board
  Game *-- Player
  Game --> GameState
  Player *-- Card
  Player *-- Noble
  Board *-- Card
  Board *-- Noble
  Move --> MoveType
  MenuOption --> MenuAction
  Card --> Gem
